# table-structure-analysis

./: README.md  main.py  pyproject.toml  pytest.ini
src/playgrround/: __init__.py
src/playgrround/core/: continuity_based_metrics.py  excel_style_based_metrics.py  value_based_metrics.py
src/playgrround/utils/: __init__.py
test/core/: __init__.py  test_value_based_metrics.py
test/fixtures/: invoice_with_aggregates.csv  sample_invoice.csv  simple_invoice.csv
