[project]
name = "playgrround"
version = "0.1.0"
description = "POC project with organized package structure"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter",
    "pandas",
    "numpy",
    "pytest>=8.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/playgrround"]
